search box moved top to avoid overlapping on banner

--- a/style.css
+++ b/style.css
@@ -7097,7 +7097,7 @@ color: #81e9e6;
 	
 #stickytypeheader {
   position: fixed;
-  top: 153px;
+  top: 77px;
   text-align: center;
   z-index: 99999999;
   width: 100%;
